Adding play music buttons to website

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ url: https://just-the-docs.github.io
 
 aux_links:
   GitHub Repository: https://github.com/eyal-sasson/music-rnn
-  Guided Notebook: https://example.com
+  Guided Notebook: https://colab.research.google.com/github/eyal-sasson/music-rnn/blob/main/MusicRNN.ipynb
 
 search_enabled: false
 
